Definitions/pod-definition.yml
apiVersion: v1

kind: Pod

metadata:
    name: myapp-pod
    labels: # Every you want
        app: myapp
        location: peru 

spec:
    containers:
        - name: nginx-container
          image: nginx


# delete pod by label
# kubectl delete pods -l name=busybox-pod
